Opened 5 years ago
Closed 10 months ago
#11565 closed bug (fixed)
[Network] preflet doesn't save DNS settings
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Network | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
This is hrev48435.
Network preflet doesn't seem to save DNS settings.
Change History (8)
comment:1 by , 5 years ago
comment:2 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Axel is currently working on a rewrite of the network preflet, so reassigning this to him.
comment:5 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Seems to work now. Closing.
comment:6 by , 5 years ago
Milestone: | R1/beta1 → R1 |
---|---|
Resolution: | fixed |
Status: | closed → reopened |
I didn't make any changes in this regard. When you use DHCP, the net_server will overwrite your settings again; this whole thing is a bit messy right now, and will need a bit more love to be really usable.
comment:7 by , 10 months ago
Should be fixed now with hrev52827. When saving the automatic settings, there are now "marker strings" in the host file which mark static and dynamic settings. And only the dynamic ones are rewritten.
comment:8 by , 10 months ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
see also #9863 and #11209
At the moment I will be happy if the settings could be saved (after rebboot)... Automatic refresh will be sure great to have in the future... Until then I am happy with manual refresh...