Network: Avoid DHCP over-writing user specified DNS settings

* Adds parser to servers/net/nethost, to check current
   settings in resolv.conf before updating

   If user has specified DNS settings manually, DHCP derived
   settings are appended to resolv.conf, rather than overwriting.

   (If no user specified data is present, or in the event of
   a badly damaged resolv.conf, DHCP over-writes file in same
   manner as prior to this change)

Fixes #11565.

Change-Id: I43464909009d2416d57f66f7bd14d13c81f803e7
Reviewed-on: https://review.haiku-os.org/c/997
Reviewed-by: Axel Dörfler <axeld@pinc-software.de>
Reviewed-by: Stephan Aßmus <superstippi@gmx.de>